added array value function

--- a/View/Sys/vue/components/sidenav/template.html
+++ b/View/Sys/vue/components/sidenav/template.html
@@ -85,6 +85,6 @@
 		</div>
 	</div>
 	<div class="side-footer">
-		<p class="">Framework v1.3.0</p>
+		<p class="">Opoink Framework</p>
 	</div>
 </div>
