--- a/View/Sys/vue/components/systemsettingsindex/template.html
+++ b/View/Sys/vue/components/systemsettingsindex/template.html
@@ -6,6 +6,9 @@
 					<div class="card-body border-bottom c-pointer" data-toggle="collapse" data-target="#sys_general_settings" aria-expanded="true" aria-controls="sys_general_settings">
 						General Setting
 					</div>
+					<div class="card-body border-bottom c-pointer" data-toggle="collapse" data-target="#sys_mailer_settings" aria-expanded="true" aria-controls="sys_mailer_settings">
+						Mailer
+					</div>
 					<div class="card-body border-bottom c-pointer" data-toggle="collapse" data-target="#sys_cache" aria-expanded="false" aria-controls="sys_cache">
 						Cache
 					</div>
@@ -147,6 +150,129 @@
 										name="g_recaptcha_secret" 
 										type="text" 
 										v-model="systemsettingsindex.settings.g_recaptcha_secret"
+									>
+								</div>
+							</div>
+						</div>
+
+						<div id="sys_mailer_settings" class="collapse" data-parent="#accordion">
+							<div class="card-body">
+								<h5 class="card-title m-0">Mailer Settings</h5>
+								<hr>
+
+								<div class="form-group mT-20 col-md-6">
+									<label for="sys_mailer_use_phpmailer">
+										Use PHPMailer
+									</label>
+									<select 
+										id="sys_mailer_use_phpmailer" 
+										class="select2 form-control custom-select" 
+										name="use_phpmailer" 
+										style="width: 100%; height:36px;"
+										v-model="systemsettingsindex.settings.mailer.use_phpmailer"
+									>
+										<option value="1">Yes</option>
+										<option value="0">No</option>
+									</select>
+								</div>
+
+								<div class="form-group mT-20 col-md-6">
+									<label for="sys_mailer_debug">
+										Debug Enabled
+									</label>
+									<select 
+										id="sys_mailer_debug" 
+										class="select2 form-control custom-select" 
+										name="sys_mailer_debug" 
+										style="width: 100%; height:36px;"
+										v-model="systemsettingsindex.settings.mailer.debug"
+									>
+										<option value="1">Yes</option>
+										<option value="0">No</option>
+									</select>
+								</div>
+
+								<div class="form-group mT-20 col-md-6">
+									<label for="sys_mailer_host">
+										Host
+									</label>
+									<input 
+										class="form-control" 
+										id="sys_mailer_host" 
+										name="sys_mailer_host" 
+										type="text" 
+										v-model="systemsettingsindex.settings.mailer.host"
+									>
+								</div>
+
+								<div class="form-group mT-20 col-md-6">
+									<label for="sys_mailer_auth">
+										Auth
+									</label>
+									<select 
+										id="sys_mailer_auth" 
+										class="select2 form-control custom-select" 
+										name="sys_mailer_auth" 
+										style="width: 100%; height:36px;"
+										v-model="systemsettingsindex.settings.mailer.auth"
+									>
+										<option value="1">Yes</option>
+										<option value="0">No</option>
+									</select>
+								</div>
+
+								<div class="form-group mT-20 col-md-6">
+									<label for="sys_mailer_username">
+										Username
+									</label>
+									<input 
+										class="form-control" 
+										id="sys_mailer_username" 
+										name="sys_mailer_username" 
+										type="text" 
+										v-model="systemsettingsindex.settings.mailer.username"
+									>
+								</div>
+
+								<div class="form-group mT-20 col-md-6">
+									<label for="sys_mailer_password">
+										Password
+									</label>
+									<input 
+										class="form-control" 
+										id="sys_mailer_password" 
+										name="sys_mailer_password" 
+										type="password" 
+										v-model="systemsettingsindex.settings.mailer.password"
+									>
+								</div>
+
+								<div class="form-group mT-20 col-md-6">
+									<label for="sys_mailer_smpt_secure">
+										SMTP secure
+									</label>
+									<select 
+										id="sys_mailer_smpt_secure" 
+										class="select2 form-control custom-select" 
+										name="sys_mailer_smpt_secure" 
+										style="width: 100%; height:36px;"
+										v-model="systemsettingsindex.settings.mailer.smpt_secure"
+									>
+										<option value="1">Yes</option>
+										<option value="0">No</option>
+									</select>
+								</div>
+
+								<div class="form-group mT-20 col-md-6">
+									<label for="sys_mailer_port">
+										Port
+									</label>
+									<input 
+										class="form-control" 
+										id="sys_mailer_port" 
+										name="sys_mailer_port" 
+										type="number" 
+										v-model="systemsettingsindex.settings.mailer.port"
 									>
 								</div>
 							</div>
