system panel update for php 8 ad above

--- a/View/Sys/Layout/default.phtml
+++ b/View/Sys/Layout/default.phtml
@@ -22,11 +22,7 @@
     <body>
         <div id="app-root">
 			<router-view></router-view>
-			<!-- <sidenav-component></sidenav-component>
-			<div class="container-wrapper">
-				<main-header-component></main-header-component>
-				<router-view></router-view>
-			</div> -->
+			<loader-component></loader-component>
 			<toast-component></toast-component>
 		</div>
 		
