--- a/View/Sys/vue/components/sidenav/sidenav-template.html
+++ b/View/Sys/vue/components/sidenav/sidenav-template.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 
-	<router-link v-bind:to="url.getUrl('/logout')">
+	<a v-bind:href="url.getUrl('/logout')">
 		<div class="sbn H-55 d-flex justify-content-center align-items-center">
 			<div class="list left d-flex justify-content-center align-items-center text-white">
 				<i class="fas fa-sign-out-alt"></i>
@@ -48,7 +48,7 @@
 				Logout 
 			</div>
 		</div>
-	</router-link>
+	</a>
 
 
 
