added new page for daabase tables

--- a/View/Sys/vue/components/sidenav/sidenav-template.html
+++ b/View/Sys/vue/components/sidenav/sidenav-template.html
@@ -83,6 +83,11 @@
 					Create Module
 				</div>
 			</router-link>
+			<router-link  v-bind:to="url.getUrl('/database')">
+				<div class="childnavlink row H-45 d-flex align-items-center">
+					Database Migration
+				</div>
+			</router-link>
 		</div>
 	</div>
 </div>
