--- a/View/Sys/Css/style.css
+++ b/View/Sys/Css/style.css
@@ -563,3 +563,47 @@ code {
 .form-group {
 	margin-bottom: 1rem;
 }
+
+.opoink-error-page .error-box {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+}
+
+.opoink-error-page .error-box .error-body {
+	width: 500px;
+	max-width: 100%;
+	background: #fff;
+	border-radius: 5px;
+	padding: 1.5rem;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 100px;
+}
+
+.c-pointer {
+	cursor: pointer;
+}
+
+ul.no-bullets {
+	list-style-type: none;
+}
+
+ul.elbow li {
+	position: relative;
+}
+ul.elbow li:before {
+	content: "";
+	position: absolute;
+	background-image: url('/public/sys/assets/images/elbow.gif');
+	height: 100%;
+	width: 20px;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	left: -25px;
+	background-position: center;
+}
+
+ul.elbow li:last-child:before {
+	background-image: url('/public/sys/assets/images/elbow-end.gif');
+}
