--- a/View/Sys/vue/components/database-index-index/database-index-index-template.html
+++ b/View/Sys/vue/components/database-index-index/database-index-index-template.html
@@ -5,12 +5,10 @@
 
 
 		<div class="p-15">
-			
-
 			<div class="card">
 				<div class="card-body">
 					<div class="row">
-						<div class="col-sm-3 col-md-3">
+						<div class="col-sm-2 col-md-2">
 							<h5>Tables</h5>
 							<div class="tablenames">
 								<ul class="no-bullets p-0">
@@ -20,7 +18,7 @@
 										</p>
 										<ul class="no-bullets collapse elbow" v-bind:id="module + '_tables'" data-bs-parent="#accordion">
 											<li class="c-pointer" v-for="(tableValue, tablename) in tables">
-												<p class="mb-0" v-on:click="vue.setTableRows(tableValue)">
+												<p class="mb-0" v-on:click="vue.setTableRows(module, tablename)">
 													<span class="fs-12 badge rounded-pill bg-success" v-if="tableValue.is_installed">
 														{{tablename}}
 													</span>
@@ -34,8 +32,45 @@
 								</ul>
 							</div>
 						</div>
-						<div class="9">
-						
+						<div class="col-sm-10 col-md-10">
+							<table class="table">
+								<thead class="thead-light">
+									<tr>
+										<th scope="col">Name</th>
+										<th scope="col">Type</th>
+										<th scope="col">Collation</th>
+										<th scope="col">Attributes</th>
+										<th scope="col">Null</th>
+										<th scope="col">Default</th>
+										<th scope="col">Action</th>
+									</tr>
+								</thead>
+								<tbody class="customtable" v-if="vue.selectedTableFiels">
+									<tr v-for="field in vue.selectedTableFiels.fields">
+										<td>
+											<span v-if="field.name">{{field.name}}</span>
+										</td>
+										<td>
+											<span v-if="field.type">{{field.type}}</span> <span v-if="field.length">({{field.length}})</span>
+										</td>
+										<td></td>
+										<td>
+											<span v-if="field.attributes">{{field.attributes}}</span>
+										</td>
+										<td>
+											<span v-if="field.nullable">Yes</span>
+											<span v-else-if="!field.nullable">No</span>
+										</td>
+										<td>
+											<span v-if="field.default === null">NULL</span>
+											<span v-else>{{field.default}}</span>
+										</td>
+										<td>
+											Edit Delete
+										</td>
+									</tr>
+								</tbody>
+							</table>
 						</div>
 					</div>
 				</div>
