--- a/View/Sys/Css/style.css
+++ b/View/Sys/Css/style.css
@@ -451,13 +451,15 @@ a {
 }
 
 .toast-container {
-  position: fixed;
-  top: 70px;
-  right: 10px;
+	position: fixed;
+	top: 70px;
+	right: 10px;
+	z-index: 99999;
 }
 
 .toast-container .toast {
-  opacity: 1;
+	opacity: 1;
+	background-color: rgb(255, 255, 255);
 }
 .sidebar-nav {
   position: fixed;
