editing the database field 1 by 1, add cration of database table  JSON schema

--- a/View/Sys/vue/components/sidenav/sidenav-template.html
+++ b/View/Sys/vue/components/sidenav/sidenav-template.html
@@ -85,7 +85,7 @@
 			</router-link>
 			<router-link  v-bind:to="url.getUrl('/database')">
 				<div class="childnavlink row H-45 d-flex align-items-center">
-					Database Migration
+					Database
 				</div>
 			</router-link>
 		</div>
