--- a/View/Sys/vue/components/database-index-index/database-index-index-template.html
+++ b/View/Sys/vue/components/database-index-index/database-index-index-template.html
@@ -97,6 +97,9 @@
 									<button class="btn btn btn-outline-primary btn-sm mR-5" title="Edit" data-bs-toggle="modal" data-bs-target="#databaseSaveFieldModal" v-on:click="vue.setField(null)">
 										Add New Field
 									</button>
+									<button class="btn btn btn-outline-danger btn-sm mR-10" title="Edit" data-bs-toggle="modal" data-bs-target="#dropDatabaseTableModal">
+										Drop Table
+									</button>
 								</div>
 							</div>
 						</div>
@@ -419,6 +422,60 @@
 					<div class="modal-footer">
 						<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
 						<button class="btn btn-primary">Save Table Fields</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	
+	
+	<!-- modal to new database table -->
+	<div class="modal fade" id="dropDatabaseTableModal" tabindex="-1" role="dialog" aria-labelledby="dropDatabaseTableModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="dropDatabaseTableModalLabel">
+						Drop Table
+					</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" v-on:click="vue.resetDropTableForm()"></button>
+				</div>
+				<form v-on:submit="vue.dropTable($event)">
+					<div class="modal-body">
+						<p class="mB-15">Are you sure you want to drop table?</p>
+
+						
+						<!-- <template v-if="vue.selectedTableValue && vue.selectedTableValue.is_installed"> -->
+						<div class="form-group" v-if="vue.selectedTableValue && vue.selectedTableValue.is_installed">
+							<div class="form-check">
+								<input class="form-check-input" type="radio" name="drop_database_table" id="droptable-only" value="droptable-only" v-model="vue.dropTableForm.action" />
+								<label class="form-check-label" for="droptable-only">
+									Drop-Table
+								</label>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<div class="form-check">
+								<input class="form-check-input" type="radio" name="drop_database_table" id="delete-json-only" value="delete-json-only" v-model="vue.dropTableForm.action" />
+								<label class="form-check-label" for="delete-json-only">
+									Delete JSON file
+								</label>
+							</div>
+						</div>
+
+						<div class="form-group" v-if="vue.selectedTableValue && vue.selectedTableValue.is_installed">
+							<div class="form-check">
+								<input class="form-check-input" type="radio" name="drop_database_table" id="droptable-and-delete-json" value="droptable-and-delete-json" v-model="vue.dropTableForm.action" />
+								<label class="form-check-label" for="droptable-and-delete-json">
+									Drop-Table and delete JSON file
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button class="btn btn-outline-danger">Drop Table</button>
+						<button type="button" class="btn btn-primary" data-bs-dismiss="modal" v-on:click="vue.resetDropTableForm()">Cancel</button>
 					</div>
 				</form>
 			</div>
