--- a/View/Sys/vue/components/database-index-index/database-index-index-template.html
+++ b/View/Sys/vue/components/database-index-index/database-index-index-template.html
@@ -9,107 +9,28 @@
 				<div class="card-body">
 					<div class="row">
 						<div class="col-sm-2 col-md-2">
-							<div class="mb-3 d-flex align-items-center">
-								<button class="btn btn btn-outline-primary btn-sm mR-5" href="javascript:void(0)" v-on:click="vue.getModuleTables()" title="reload tables">
-									<i class="fas fa-sync"></i>
-								</button>
-							</div>
-							<h5>Tables</h5>
-							<div class="tablenames">
-								<ul class="no-bullets p-0">
-									<li v-for="(tables, module) in vue.alltables">
-										<p class="mb-0 c-pointer" data-bs-toggle="collapse" v-bind:data-bs-target="'#' + module + '_tables'" aria-expanded="false" v-bind:aria-controls="module + '_tables'">
-											{{module}}
-										</p>
-										<ul class="no-bullets collapse elbow" v-bind:id="module + '_tables'" data-bs-parent="#accordion">
-											<li class="c-pointer" data-bs-toggle="modal" data-bs-target="#newDatabaseTableModal" v-on:click="vue.selectedModule = module">
-												<p class="mb-0">New Table</p>
-											</li>
-											<li class="c-pointer" v-for="(tableValue, tablename) in tables">
-												<p class="mb-0" v-on:click="vue.setTableRows(module, tablename, tableValue)">
-													<span class="fs-12 badge rounded-pill bg-success" v-if="tableValue.is_installed">
-														{{tablename}}
-													</span>
-													<span class="fs-12 badge rounded-pill bg-danger" v-if="!tableValue.is_installed">
-														{{tablename}}
-													</span>
-												</p>
-											</li>
-										</ul>
-									</li>
-								</ul>
-							</div>
+							<common-database-tables-component></common-database-tables-component>
 						</div>
 						<div class="col-sm-10 col-md-10">
-							<table class="table">
-								<thead class="thead-light">
-									<tr>
-										<th scope="col">Name</th>
-										<th scope="col">Type</th>
-										<th scope="col">Collation</th>
-										<th scope="col">Attributes</th>
-										<th scope="col">Null</th>
-										<th scope="col">Default</th>
-										<th scope="col">Installed</th>
-										<th scope="col">Action</th>
-									</tr>
-								</thead>
-								<tbody class="customtable" v-if="vue.selectedTableFields">
-									<tr v-for="field in vue.selectedTableFields.fields">
-										<td>
-											<span v-if="field.name">{{field.name}}</span><span v-if="field.primary" class="mL-5 text-warning"><i class="fas fa-key"></i></span>
-										</td>
-										<td>
-											<span v-if="field.type">{{field.type}}</span> <span v-if="field.length">({{field.length}})</span>
-										</td>
-										<td>
-											<span v-if="field.collation">{{field.collation}}</span>
-										</td>
-										<td>
-											<span v-if="field.attributes">{{field.attributes}}</span>
-										</td>
-										<td>
-											<span v-if="field.nullable">Yes</span>
-											<span v-else-if="!field.nullable">No</span>
-										</td>
-										<td>
-											<span v-if="field.default === null">NULL</span>
-											<span v-else>{{field.default}}</span>
-										</td>
-										<td>
-											<span class="badge rounded-pill bg-success" v-if="field.is_installed"><i class="fas fa-check"></i></span>
-											<span class="badge rounded-pill bg-danger" v-else><i class="fas fa-times"></i></span>
-										</td>
-										<td>
-											<button class="btn btn btn-outline-primary btn-sm mR-5" title="Edit" data-bs-toggle="modal" data-bs-target="#databaseSaveFieldModal" v-on:click="vue.setField(field)">
-												<i class="fas fa-pencil-alt"></i>
-											</button>
-											<button class="btn btn btn btn-outline-danger btn-sm" title="Drop" data-bs-toggle="modal" data-bs-target="#databaseDropFieldModal" v-on:click="vue.setField(field)">
-												<i class="fas fa-trash-alt"></i>
-											</button>
-										</td>
-									</tr>
-								</tbody>
-							</table>
-
-							<div class="row" v-if="vue.selectedTableFields">
+							<div class="row">
 								<div class="col-12">
-									<template v-if="vue.selectedTableValue && !vue.selectedTableValue.is_installed">
-										<button class="btn btn btn-primary btn-sm mR-10" title="Edit" data-bs-toggle="modal" data-bs-target="#saveDatabaseTableFieldsModal">
-											Install All Fields
-										</button>
-									</template>
-									<button class="btn btn btn-outline-primary btn-sm mR-10" title="Add New Field" data-bs-toggle="modal" data-bs-target="#databaseSaveFieldModal" v-on:click="vue.setField(null)">
-										Add New Field
-									</button>
-									<button class="btn btn btn-outline-primary btn-sm mR-10" title="Install Data">
-										Install Data
-									</button>
-									<button class="btn btn btn-outline-danger btn-sm mR-10" title="Drop Table" data-bs-toggle="modal" data-bs-target="#dropDatabaseTableModal" v-on:click="vue.resetDropTableForm()">
-										Drop Table
-									</button>
+									<ul class="nav nav-tabs">
+										<li class="nav-item">
+											<a class="nav-link" v-bind:class="{active : vue.viewMode == 'table-structure'}" href="javascript:void(0)" v-on:click="vue.viewMode = 'table-structure'">
+												Table Structure
+											</a>
+										</li>
+										<li class="nav-item">
+											<a class="nav-link" v-bind:class="{active : vue.viewMode == 'data-structure'}" href="javascript:void(0)" v-on:click="vue.viewMode = 'data-structure'">
+												Install Data
+											</a>
+										</li>
+									</ul>
 								</div>
 							</div>
+
+							<common-database-table-structure-component v-if="vue.viewMode == 'table-structure'"></common-database-table-structure-component>
+							<common-database-data-structure-component v-if="vue.viewMode == 'data-structure'"></common-database-data-structure-component>
 						</div>
 					</div>
 				</div>
