--- a/View/Sys/vue/components/database-index-index/database-index-index-template.html
+++ b/View/Sys/vue/components/database-index-index/database-index-index-template.html
@@ -410,5 +410,8 @@
 			</div>
 		</div>
 	</div>
+
+	
+	<modal-database-add-edit-data-component :databaseIndexIndexComponent="vue"></modal-database-add-edit-data-component>
 </div>
 
