JSON file for installation dataentry

--- a/View/Sys/vue/components/common-database-data-structure/common-database-data-structure-template.html
+++ b/View/Sys/vue/components/common-database-data-structure/common-database-data-structure-template.html
@@ -1,4 +1,4 @@
-<div class="common-database-data-structure-component" v-if="vue">
+<div class="common-database-data-structure-component" v-if="vue?.selectedTableFields">
 	<table class="table">
 		<thead class="thead-light">
 			<tr>
