--- a/View/Sys/vue/components/common-database-data-structure/common-database-data-structure-template.html
+++ b/View/Sys/vue/components/common-database-data-structure/common-database-data-structure-template.html
@@ -5,19 +5,31 @@
 				<th scope="col" v-for="field in vue.selectedTableFields.fields">{{field.name}}</th>
 			</tr>
 		</thead>
+		<tbody class="customtable" v-if="vue.selectedTableFields.installation_data">
+			<tr v-for="data in vue.selectedTableFields.installation_data">
+				<td v-for="field in vue.selectedTableFields.fields">
+					<template v-if="data[field.name]">
+						<span>{{data[field.name]['value']}}</span>
+						<span class="mL-5 badge rounded-pill bg-info" v-if="data[field.name]['option']?.is_hashed">Hashed</span>
+					</template>
+				</td>
+			</tr>
+		</tbody>
 	</table>
-	<div class="row">
+	<div class="row mB-15">
 		<div class="col-12" v-if="vue.selectedTableFields">
 			<button class="btn btn btn-outline-primary btn-sm mR-10" title="Add New Data" data-bs-toggle="modal" data-bs-target="#modalDatabaseAddEditData">
 				Add New Data
 			</button>
 		</div>
 	</div> 
-	<small class="text-muted">
+	<small class="text-muted" class="text-muted" v-if="vue.selectedModule && vue.selectedTableName">
 		Note:
 		<br />
 		The data you see here doesn't mean it is saved on the database. Well, it can be in the database or not in the database.
 		<br />
 		This data will be saved in the database during the module installation, or if you click the save button on this page.
+		<br />
+		You can manually edit the file at {{vue.selectedModule}}/Schema/tables/{{vue.selectedTableName}}_data.json
 	</small>
 </div>
