--- a/View/Sys/vue/components/common-database-table-structure/common-database-table-structure-template.html
+++ b/View/Sys/vue/components/common-database-table-structure/common-database-table-structure-template.html
@@ -50,7 +50,7 @@
 		</tbody>
 	</table>
 
-	<div class="row">
+	<div class="row mB-15">
 		<div class="col-12" v-if="vue.selectedTableFields">
 			<template v-if="vue.selectedTableValue && !vue.selectedTableValue.is_installed">
 				<button class="btn btn btn-primary btn-sm mR-10" title="Edit" data-bs-toggle="modal" data-bs-target="#saveDatabaseTableFieldsModal">
@@ -65,4 +65,7 @@
 			</button>
 		</div>
 	</div> 
+	<small class="text-muted" v-if="vue.selectedModule && vue.selectedTableName">
+		You can manually edit the file at {{vue.selectedModule}}/Schema/tables/{{vue.selectedTableName}}.json
+	</small>
 </div>
