--- a/View/Sys/vue/components/modal-database-add-edit-data/modal-database-add-edit-data-template.html
+++ b/View/Sys/vue/components/modal-database-add-edit-data/modal-database-add-edit-data-template.html
@@ -8,41 +8,60 @@
 					<h5 class="modal-title" id="modalDatabaseAddEditDataLabel">
 						Add New Installation Data
 					</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" v-on:click="vue.resetFormFields()"></button>
 				</div>
 				<form v-on:submit="vue.saveInsallData($event)">
 					<div class="modal-body" v-if="databaseIndexIndexComponent.selectedTableFields">
 						
-						
-						<div class="form-group row" v-for="field in databaseIndexIndexComponent.selectedTableFields.fields">
-							<label v-bind:for='"install-data"+field.name' class="col-sm-4 col-form-label text-end text-sm-end">{{field.name}}</label>
-							<div class="col-sm-8">
-								<input type="text" class="form-control" v-bind:id='"install-data"+field.name' v-bind:name="field.name + '[value]'" v-bind:placeholder="field.name" autocomplete="0">
-								<div class="form-group">
-									<div class="form-check">
-										<input class="form-check-input" type="checkbox" v-bind:name="field.name + '[option][is_hashed]'" v-bind:id='"install-data-hash"+field.name' value="1" />
-										<label class="form-check-label" v-bind:for='"install-data-hash"+field.name'>
-											Hash this field.
-										</label>
+						<div class="form-group" v-for="field in databaseIndexIndexComponent.selectedTableFields.fields">
+							<label v-bind:for='"install-data"+field.name'>
+								{{field.name}}<span v-if="field.primary" class="mL-5 text-warning"><i class="fas fa-key"></i></span>
+							</label>
+							<div class="row" v-if="vue.formFields[field.name]">
+								<div class="" v-bind:class="[field.primary ? 'col-12' : 'col-9 pR-0']">
+									<input 
+										type="text" 
+										class="form-control" 
+										v-bind:id='"install-data"+field.name' 
+										v-bind:name="field.name + '[value]'" 
+										v-bind:placeholder="field.name" 
+										autocomplete="0"
+										v-model="vue.formFields[field.name].value"
+									/>
+									<small class="text-muted" v-if="field.primary">
+										Define this field to avoid duplicate entry, upon re-installing the module, must be an int value.
+									</small>
+								</div>
+								<div class="col-3 d-flex align-items-center" v-if="!field.primary">
+									<div class="form-group mb-0">
+										<div class="form-check mb-0">
+											<input 
+												class="form-check-input" 
+												type="checkbox" 
+												v-bind:name="field.name + '[option][is_hashed]'" 
+												v-bind:id='"install-data-hash"+field.name' 
+												value="1" 
+												v-model="vue.formFields[field.name].option.is_hashed"
+											/>
+											<label class="form-check-label" v-bind:for='"install-data-hash"+field.name'>
+												Is Hash
+											</label>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 
-						<div class="form-group row">
-							<div class="col-sm-8 offset-4">
-								<div class="form-group mb-0">
-									<div class="form-check">
-										<input class="form-check-input" type="checkbox" id='install-data-save-to-database' v-model="vue.installDataSaveToDatabase" />
-										<label class="form-check-label" for='install-data-save-to-database'>
-											Save data into the database
-										</label>
-									</div>
-									<small class="text-muted">
-										This data will also be saved into the database.
-									</small>
-								</div>
+						<div class="form-group">
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" id='install-data-save-to-database' v-model="vue.installDataSaveToDatabase" />
+								<label class="form-check-label" for='install-data-save-to-database'>
+									Save data into the database
+								</label>
 							</div>
+							<small class="text-muted">
+								This data will also be saved into the database.
+							</small>
 						</div>
 
 						<small class="text-muted">
@@ -52,7 +71,7 @@
 						</small>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancel</button>
+						<button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" v-on:click="vue.resetFormFields()">Cancel</button>
 						<button class="btn btn-primary">Save Installation Data</button>
 					</div>
 				</form>
