delete installation modal started

--- a/View/Sys/vue/components/database-index-index/database-index-index-template.html
+++ b/View/Sys/vue/components/database-index-index/database-index-index-template.html
@@ -413,5 +413,6 @@
 
 	
 	<modal-database-add-edit-data-component :databaseIndexIndexComponent="vue"></modal-database-add-edit-data-component>
+	<modal-database-delete-data-component :databaseIndexIndexComponent="vue"></modal-database-delete-data-component>
 </div>
 
