--- a/View/Sys/vue/components/common-database-data-structure/common-database-data-structure-template.html
+++ b/View/Sys/vue/components/common-database-data-structure/common-database-data-structure-template.html
@@ -18,7 +18,7 @@
 					<button class="btn btn btn-outline-primary btn-sm mR-5" title="Edit" v-on:click="modalDatabaseAddEditDataComponent.setEditFormField(data, index)">
 						<i class="fas fa-pencil-alt"></i>
 					</button>
-					<button class="btn btn btn btn-outline-danger btn-sm" title="Drop">
+					<button class="btn btn btn btn-outline-danger btn-sm" title="Drop" v-on:click="modalDatabaseDeleteDataComponent.setEditFormField(data, index)">
 						<i class="fas fa-trash-alt"></i>
 					</button>
 				</td>
