delete installation data, now the system UI database feature is ready for testing

--- a/View/Sys/vue/components/modal-database-add-edit-data/modal-database-add-edit-data-template.html
+++ b/View/Sys/vue/components/modal-database-add-edit-data/modal-database-add-edit-data-template.html
@@ -10,7 +10,7 @@
 					</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" v-on:click="vue.resetFormFields()"></button>
 				</div>
-				<form v-on:submit="vue.saveInsallData($event)">
+				<form v-on:submit="vue.saveInstallData($event)">
 					<div class="modal-body" v-if="databaseIndexIndexComponent.selectedTableFields">
 						
 						<div class="form-group" v-for="field in databaseIndexIndexComponent.selectedTableFields.fields">
