made some fixes after testing

--- a/View/Sys/vue/components/database-index-index/database-index-index-template.html
+++ b/View/Sys/vue/components/database-index-index/database-index-index-template.html
@@ -333,7 +333,7 @@
 
 	
 	
-	<!-- modal to new database table -->
+	<!-- modal to install table including the coloumn -->
 	<div class="modal fade" id="saveDatabaseTableFieldsModal" tabindex="-1" role="dialog" aria-labelledby="saveDatabaseTableFieldsModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
