--- a/View/Sys/vue/components/common-database-table-structure/common-database-table-structure-template.html
+++ b/View/Sys/vue/components/common-database-table-structure/common-database-table-structure-template.html
@@ -39,10 +39,10 @@
 					<span class="badge rounded-pill bg-danger" v-else><i class="fas fa-times"></i></span>
 				</td>
 				<td>
-					<button class="btn btn btn-outline-primary btn-sm mR-5" title="Edit" data-bs-toggle="modal" data-bs-target="#databaseSaveFieldModal" v-on:click="vue.setField(field)">
+					<button class="btn btn-outline-primary btn-sm mR-5" title="Edit" data-bs-toggle="modal" data-bs-target="#databaseSaveFieldModal" v-on:click="vue.setField(field)">
 						<i class="fas fa-pencil-alt"></i>
 					</button>
-					<button class="btn btn btn btn-outline-danger btn-sm" title="Drop" data-bs-toggle="modal" data-bs-target="#databaseDropFieldModal" v-on:click="vue.setField(field)">
+					<button class="btn btn-outline-danger btn-sm" title="Drop" data-bs-toggle="modal" data-bs-target="#databaseDropFieldModal" v-on:click="vue.setField(field)">
 						<i class="fas fa-trash-alt"></i>
 					</button>
 				</td>
