--- a/View/Sys/Layout/default.phtml
+++ b/View/Sys/Layout/default.phtml
@@ -30,6 +30,9 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<script src="/public/sys/dist/js/vue.js"></script>
 		<script src="/public/sys/dist/js/vue-router.js"></script>
+
+		<?php /** https://github.com/ElliotNB/observable-slim */ ?>
+		<script src="/public/sys/dist/js/observable-slim.min.js"></script>
 		
         <script src="<?= $this->getUrl('/system/static/vue/main.js') ?>"></script>
     </body>
