--- a/View/Sys/vue/components/common-database-table-rellation-view/common-database-table-rellation-view-template.html
+++ b/View/Sys/vue/components/common-database-table-rellation-view/common-database-table-rellation-view-template.html
@@ -8,6 +8,7 @@
 				<th scope="col">Column <span class="text-danger">*</span></th>
 				<th scope="col">Reference Table <span class="text-danger">*</span></th>
 				<th scope="col">Reference Column <span class="text-danger">*</span></th>
+				<th scope="col">Installed</th>
 				<th scope="col">Action</th>
 			</tr>
 		</thead>
@@ -64,6 +65,10 @@
 					</div>
 				</td>
 				<td>
+					<span class="badge rounded-pill bg-success" v-if="form.is_installed"><i class="fas fa-check"></i></span>
+					<span class="badge rounded-pill bg-danger" v-else><i class="fas fa-times"></i></span>
+				</td>
+				<td>
 					<button 
 						class="btn btn-outline-danger btn-sm" 
 						title="Drop" 
@@ -104,7 +109,7 @@
 					<h5 class="modal-title" id="modalDatabaseSaveRelationConfirmDataLabel">
 						Save Relation
 					</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" v-on:click="vue.resetSaveAndInstall()"></button>
 				</div>
 				<div class="modal-body" v-if="vue.databaseIndexIndex.selectedModule">
 					<p>
@@ -126,7 +131,7 @@
 
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancel</button>
+					<button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" v-on:click="vue.resetSaveAndInstall()">Cancel</button>
 					<button class="btn btn-primary" v-on:click="vue.saveConstraint()">Save Relation</button>
 				</div>
 			</div>
